@@ -184,88 +184,143 @@ typedef struct {
 					  user_data, NULL, GNOME_APP_PIXMAP_DATA, xpm_data,	\
 					  0, (GdkModifierType) 0, NULL }
 					  
-/* Stock menu item macros for some common menu items */
-#define GNOMEUIINFO_MENU_EXIT_ITEM(cb, data)                                \
-        { GNOME_APP_UI_ITEM, N_("E_xit"), NULL, cb, (gpointer)(data), NULL, \
-          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_EXIT,                    \
-          GNOME_KEY_NAME_EXIT, GNOME_KEY_MOD_EXIT, NULL }
-#define GNOMEUIINFO_MENU_CLOSE_ITEM(cb, data)                                \
-        { GNOME_APP_UI_ITEM, N_("_Close"), NULL, cb, (gpointer)(data), NULL, \
-          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_CLOSE,                    \
+/*
+ * Stock menu item macros for some common menu items.  Please see
+ * gnome-libs/devel-docs/suggestions.txt about GNOME menu standards.
+ */
+
+/*
+ * The 'File' menu
+ */
+
+/*
+ * Note: New item requires to to specify what is new, so you need
+ * to specify the document type, so you need to supply the label
+ * as well (it should start with "_New ")
+ */
+#define GNOMEUIINFO_MENU_NEW_ITEM(label, cb, data)                          \
+        { GNOME_APP_UI_ITEM, label, N_("Create a new document"),            \
+          cb, (gpointer)(data), NULL,                                       \
+          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_NEW,                     \
+          GNOME_KEY_NAME_NEW, GNOME_KEY_MOD_NEW, NULL }
+
+/* If you have more then one New type, use this tree */
+#define GNOMEUIINFO_MENU_NEW_SUBTREE(tree)                                  \
+        { GNOME_APP_UI_SUBTREE, N_("_New"), NULL, tree, NULL, NULL,         \
+          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_NEW,                     \
+          GNOME_KEY_NAME_NEW, GNOME_KEY_MOD_NEW, NULL }
+
+#define GNOMEUIINFO_MENU_OPEN_ITEM(cb, data)                                \
+        { GNOME_APP_UI_ITEM, N_("_Open..."), N_("Open a document"),         \
+          cb, (gpointer)(data), NULL,                                       \
+          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_SAVE,                    \
+          GNOME_KEY_NAME_OPEN, GNOME_KEY_MOD_OPEN, NULL }
+
+#define GNOMEUIINFO_MENU_SAVE_ITEM(cb, data)                                \
+        { GNOME_APP_UI_ITEM, N_("_Save"), N_("Save the current document"),  \
+          cb, (gpointer)(data), NULL,                                       \
+          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_SAVE,                    \
+          GNOME_KEY_NAME_SAVE, GNOME_KEY_MOD_SAVE, NULL }
+
+#define GNOMEUIINFO_MENU_SAVE_AS_ITEM(cb, data)                             \
+        { GNOME_APP_UI_ITEM, N_("Save _As..."),                             \
+          N_("Save the current document with a different name"),            \
+          cb, (gpointer)(data),                                             \
+	  NULL, GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_SAVE_AS,           \
+          GNOME_KEY_NAME_SAVE_AS, GNOME_KEY_MOD_SAVE_AS, NULL }
+
+#define GNOMEUIINFO_MENU_REVERT_ITEM(cb, data)                              \
+        { GNOME_APP_UI_ITEM, N_("_Revert"),                                 \
+          N_("Revert to a saved version of the document"),                  \
+          cb, (gpointer)(data), NULL,                                       \
+          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_REVERT,                  \
+          0,  (GdkModifierType) 0, NULL }
+
+#define GNOMEUIINFO_MENU_PRINT_ITEM(cb, data)                               \
+        { GNOME_APP_UI_ITEM, N_("_Print"), N_("Print the current document"),\
+          cb, (gpointer)(data), NULL,                                       \
+          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PRINT,                   \
+          0,  (GdkModifierType) 0, NULL }
+
+#define GNOMEUIINFO_MENU_PRINT_SETUP_ITEM(cb, data)                         \
+        { GNOME_APP_UI_ITEM, N_("Print S_etup..."),                         \
+          N_("Setup the page settings for your current printer"),           \
+          cb, (gpointer)(data),                                             \
+	  NULL, GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PRINT,             \
+          0,  (GdkModifierType) 0, NULL }
+
+#define GNOMEUIINFO_MENU_PREFERENCES_ITEM(cb, data)                         \
+        { GNOME_APP_UI_ITEM, N_("Preferences..."),                          \
+          N_("Configure the application"),                                  \
+          cb, (gpointer)(data),                                             \
+	  NULL, GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PREFERENCES,       \
+          0,  (GdkModifierType) 0, NULL }
+
+#define GNOMEUIINFO_MENU_CLOSE_ITEM(cb, data)                               \
+        { GNOME_APP_UI_ITEM, N_("_Close"), N_("Close the current document"),\
+          cb, (gpointer)(data), NULL,                                       \
+          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_CLOSE,                   \
           GNOME_KEY_NAME_CLOSE, GNOME_KEY_MOD_CLOSE, NULL }
-#define GNOMEUIINFO_MENU_CUT_ITEM(cb, data)                                \
-        { GNOME_APP_UI_ITEM, N_("C_ut"), NULL, cb, (gpointer)(data), NULL, \
-          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_CUT,                    \
+
+#define GNOMEUIINFO_MENU_EXIT_ITEM(cb, data)                                \
+        { GNOME_APP_UI_ITEM, N_("E_xit"), N_("Exit the program"),           \
+          cb, (gpointer)(data), NULL, GNOME_APP_PIXMAP_STOCK,               \
+	  GNOME_STOCK_MENU_EXIT, GNOME_KEY_NAME_EXIT, GNOME_KEY_MOD_EXIT,   \
+	    NULL }
+/*
+ * The "Edit" menu
+ */
+
+#define GNOMEUIINFO_MENU_CUT_ITEM(cb, data)                                 \
+        { GNOME_APP_UI_ITEM, N_("C_ut"), N_("Cut the selection"),           \
+          cb, (gpointer)(data), NULL,                                       \
+          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_CUT,                     \
           GNOME_KEY_NAME_CUT, GNOME_KEY_MOD_CUT, NULL }
+
 #define GNOMEUIINFO_MENU_COPY_ITEM(cb, data)                                \
-        { GNOME_APP_UI_ITEM, N_("_Copy"), NULL, cb, (gpointer)(data), NULL, \
+        { GNOME_APP_UI_ITEM, N_("_Copy"), N_("Copy the selection"),         \
+          cb, (gpointer)(data), NULL,                                       \
           GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_COPY,                    \
           GNOME_KEY_NAME_COPY, GNOME_KEY_MOD_COPY, NULL }
-#define GNOMEUIINFO_MENU_PASTE_ITEM(cb, data)                                \
-        { GNOME_APP_UI_ITEM, N_("_Paste"), NULL, cb, (gpointer)(data), NULL, \
-          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PASTE,                    \
+
+#define GNOMEUIINFO_MENU_PASTE_ITEM(cb, data)                               \
+        { GNOME_APP_UI_ITEM, N_("_Paste"), N_("Paste the clipboard"),       \
+          cb, (gpointer)(data), NULL,                                       \
+          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PASTE,                   \
           GNOME_KEY_NAME_PASTE, GNOME_KEY_MOD_PASTE, NULL }
-#define GNOMEUIINFO_MENU_CLEAR_ITEM(cb, data)                                \
-        { GNOME_APP_UI_ITEM, N_("C_lear"), NULL, cb, (gpointer)(data), NULL, \
-          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_CLEAR,                    \
+
+#define GNOMEUIINFO_MENU_CLEAR_ITEM(cb, data)                               \
+        { GNOME_APP_UI_ITEM, N_("C_lear"), N_("Clear the selection"),       \
+          cb, (gpointer)(data), NULL,                                       \
+          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_CLEAR,                   \
           GNOME_KEY_NAME_CLEAR, GNOME_KEY_MOD_CLEAR, NULL }
+
 #define GNOMEUIINFO_MENU_UNDO_ITEM(cb, data)                                \
-        { GNOME_APP_UI_ITEM, N_("_Undo"), NULL, cb, (gpointer)(data), NULL, \
+        { GNOME_APP_UI_ITEM, N_("_Undo"), N_("Undo the last action"),       \
+          NULL, cb, (gpointer)(data), NULL,                                 \
           GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_UNDO,                    \
           GNOME_KEY_NAME_UNDO, GNOME_KEY_MOD_UNDO, NULL }
+
 #define GNOMEUIINFO_MENU_REDO_ITEM(cb, data)                                \
-        { GNOME_APP_UI_ITEM, N_("_Redo"), NULL, cb, (gpointer)(data), NULL, \
+        { GNOME_APP_UI_ITEM, N_("_Redo"), N_("Redo the undone action"),     \
+          cb, (gpointer)(data), NULL,                                       \
           GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_REDO,                    \
           GNOME_KEY_NAME_REDO, GNOME_KEY_MOD_REDO, NULL }
 
-/*Note: New item requires to to specify what is new, so you need
-  to specify the document type, so you need to supply the label
-  as well (it should start with "_New ")*/
-#define GNOMEUIINFO_MENU_NEW_ITEM(label, cb, data)                    \
-        { GNOME_APP_UI_ITEM, label, NULL, cb, (gpointer)(data), NULL, \
-          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_NEW,               \
-          GNOME_KEY_NAME_NEW, GNOME_KEY_MOD_NEW, NULL }
-/*If you have more then one New type, use this tree*/
-#define GNOMEUIINFO_MENU_NEW_SUBTREE(tree)                          \
-        { GNOME_APP_UI_SUBTREE, N_("_New"), NULL, tree, NULL, NULL, \
-          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_NEW,             \
-          GNOME_KEY_NAME_NEW, GNOME_KEY_MOD_NEW, NULL }
+#define GNOMEUIINFO_MENU_PROPERTIES_ITEM(cb, data)                          \
+        { GNOME_APP_UI_ITEM, N_("Properties..."),                           \
+          N_("Modify the document's properties"),                           \
+          cb, (gpointer)(data),                                             \
+	  NULL, GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PROPERTIES,        \
+          0,  (GdkModifierType) 0, NULL }
 
-#define GNOMEUIINFO_MENU_SAVE_ITEM(cb, data)                                \
-        { GNOME_APP_UI_ITEM, N_("_Save"), NULL, cb, (gpointer)(data), NULL, \
-          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_SAVE,                    \
-          GNOME_KEY_NAME_SAVE, GNOME_KEY_MOD_SAVE, NULL }
-#define GNOMEUIINFO_MENU_SAVE_AS_ITEM(cb, data)                             \
-        { GNOME_APP_UI_ITEM, N_("Save _As..."), NULL, cb, (gpointer)(data), \
-	  NULL, GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_SAVE_AS,           \
-          GNOME_KEY_NAME_SAVE_AS, GNOME_KEY_MOD_SAVE_AS, NULL }
-#define GNOMEUIINFO_MENU_OPEN_ITEM(cb, data)                                   \
-        { GNOME_APP_UI_ITEM, N_("_Open..."), NULL, cb, (gpointer)(data), NULL, \
-          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_SAVE,                       \
-          GNOME_KEY_NAME_OPEN, GNOME_KEY_MOD_OPEN, NULL }
-#define GNOMEUIINFO_MENU_PRINT_ITEM(cb, data)                                   \
-        { GNOME_APP_UI_ITEM, N_("_Print"), NULL, cb, (gpointer)(data), NULL,    \
-          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PRINT,                       \
-          0,  (GdkModifierType) 0, NULL }
-#define GNOMEUIINFO_MENU_PRINT_SETUP_ITEM(cb, data)                             \
-        { GNOME_APP_UI_ITEM, N_("Print S_etup..."), NULL, cb, (gpointer)(data), \
-	  NULL, GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PRINT,                 \
-          0,  (GdkModifierType) 0, NULL }
-#define GNOMEUIINFO_MENU_REVERT_ITEM(cb, data)                                \
-        { GNOME_APP_UI_ITEM, N_("_Revert"), NULL, cb, (gpointer)(data), NULL, \
-          GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_REVERT,                    \
-          0,  (GdkModifierType) 0, NULL }
-#define GNOMEUIINFO_MENU_PREFERENCES_ITEM(cb, data)                            \
-        { GNOME_APP_UI_ITEM, N_("Preferences..."), NULL, cb, (gpointer)(data), \
-	  NULL, GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PREFERENCES,          \
-          0,  (GdkModifierType) 0, NULL }
-#define GNOMEUIINFO_MENU_PROPERTIES_ITEM(cb, data)                            \
-        { GNOME_APP_UI_ITEM, N_("Properties..."), NULL, cb, (gpointer)(data), \
-	  NULL, GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_PROPERTIES,          \
-          0,  (GdkModifierType) 0, NULL }
-#define GNOMEUIINFO_MENU_ABOUT_ITEM(cb, data)                             \
-        { GNOME_APP_UI_ITEM, N_("_About..."), NULL, cb, (gpointer)(data), \
-	  NULL, GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_ABOUT,           \
+/*
+ * And the "Help" menu
+ */
+#define GNOMEUIINFO_MENU_ABOUT_ITEM(cb, data)                               \
+        { GNOME_APP_UI_ITEM, N_("_About..."),                               \
+          N_("About this application")NULL, cb, (gpointer)(data),           \
+	  NULL, GNOME_APP_PIXMAP_STOCK, GNOME_STOCK_MENU_ABOUT,             \
           0,  (GdkModifierType) 0, NULL }
 	  
 /* Some standard menus */
